connect to database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/leads_olx
+spring.datasource.url=jdbc:postgresql://leads-jairorocha-database.postgres.database.azure.com:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=36R174DJPC7703S8$
 spring.jpa.properties.hibernate.check_nullability=true
 
 # OLX PRO Api
