--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.jpa.properties.hibernate.check_nullability=true
 olxpro.client-name=Jairo Rocha
 olxpro.application-name=Leads Jairo Rocha
 olxpro.application-description=Gerador de leads no OLX Pro
-olxpro.website=http://localhost:8080
+olxpro.website=https://leads-jairorocha-api.azurewebsites.net
 olxpro.phone=+55 81 99487-1234
 olxpro.email=sucessodeleads@gmail.com
